opam-version: "2.0"
name: "stationary"
version: "0.0.1"
maintainer: "Izaak Meckler <ihmeckler@gmail.com>"
authors: "Izaak Meckler <ihmeckler@gmail.com>"
homepage: "https://github.com/imeckler/stationary"
bug-reports: "https://github.com/imeckler/stationary/issues"
license: "MIT"
dev-repo: "git+https://github.com/imeckler/stationary.git"
build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs "@install"]
]
depends: [
  "dune" {>= "1.11"}
  "core"
  "async"
]
synopsis: "Static site generator"
description: """
Stationary is an OCaml static-site-generator library. Essentially, you use it to describe the directory structure of your site, which may contain HTML files generated when your program runs.
"""
